--- a/index.html
+++ b/index.html
@@ -147,6 +147,10 @@
                         </div>
                     </div>
                     <div class="flex gap-2 flex-wrap">
+                        <button onclick="openChat()" class="bg-white/20 hover:bg-white/30 px-4 py-2 rounded-lg transition flex items-center gap-2">
+                            <span class="text-lg">💬</span>
+                            Chat
+                        </button>
                         <button onclick="viewMyPage()" class="bg-white/20 hover:bg-white/30 px-4 py-2 rounded-lg transition flex items-center gap-2">
                             <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z"></path>
@@ -999,6 +1003,45 @@
                 </div>
 
                 <textarea id="deployChecklist" class="w-full hidden"></textarea>
+            </div>
+        </div>
+    </div>
+
+    <!-- Chat Modal -->
+    <div id="chatModal" class="hidden fixed inset-0 bg-black/50 flex items-center justify-center p-4 z-50">
+        <div class="bg-white rounded-2xl card-shadow w-full max-w-lg h-[600px] flex flex-col overflow-hidden">
+            <div class="bg-gradient-to-r from-indigo-500 to-purple-600 p-4 text-white flex items-center justify-between">
+                <div class="flex items-center gap-2">
+                    <span class="text-2xl">💬</span>
+                    <div>
+                        <h3 class="font-bold text-lg">Community Chat</h3>
+                        <p class="text-xs opacity-80" id="chatOnlineCount">Connecting...</p>
+                    </div>
+                </div>
+                <button onclick="closeChat()" class="bg-white/20 hover:bg-white/30 p-2 rounded-lg transition">
+                    <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
+                    </svg>
+                </button>
+            </div>
+            
+            <div id="chatMessages" class="flex-1 p-4 overflow-y-auto space-y-3 bg-gray-50">
+                <div class="text-center text-gray-400 text-sm py-8">
+                    <span class="text-3xl block mb-2">💬</span>
+                    Loading messages...
+                </div>
+            </div>
+            
+            <div class="p-4 border-t border-gray-200 bg-white">
+                <div class="flex gap-2">
+                    <input type="text" id="chatInput" class="flex-1 px-4 py-3 border border-gray-300 rounded-lg focus:outline-none focus:border-indigo-500 transition" placeholder="Type a message..." onkeypress="if(event.key==='Enter')sendMessage()">
+                    <button onclick="sendMessage()" class="bg-gradient-to-r from-indigo-500 to-purple-600 text-white px-6 py-3 rounded-lg font-semibold hover:opacity-90 transition flex items-center gap-2">
+                        <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 19l9 2-9-18-9 18 9-2zm0 0v-8"></path>
+                        </svg>
+                        Send
+                    </button>
+                </div>
             </div>
         </div>
     </div>
