--- a/index.html
+++ b/index.html
@@ -162,6 +162,9 @@
                             <span class="text-lg">🎨</span>
                             Chat Editor
                         </button>
+                        <button onclick="toggleDarkMode()" id="darkModeBtn" class="bg-white/20 hover:bg-white/30 px-4 py-2 rounded-lg transition flex items-center gap-2" title="Toggle Dark Mode">
+                            <span class="text-lg" id="darkModeIcon">🌙</span>
+                        </button>
                         <button onclick="openNotifications()" class="bg-white/20 hover:bg-white/30 px-4 py-2 rounded-lg transition flex items-center gap-2 relative">
                             <span class="text-lg">🔔</span>
                             Notifications
