--- a/index.html
+++ b/index.html
@@ -11,45 +11,34 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Poppins:wght@400;600;700&family=Roboto:wght@400;700&family=Montserrat:wght@400;700&family=Playfair+Display:wght@700&family=Space+Grotesk:wght@500;700&family=JetBrains+Mono&display=swap" rel="stylesheet">
     <script>
-        // Apply theme immediately to head to prevent flash
+        // Apply theme immediately
         (function() {
-            const theme = localStorage.getItem('studio_theme');
-            if (theme === 'dark' || !theme) document.documentElement.classList.add('dark');
+            try {
+                const theme = localStorage.getItem('studio_theme');
+                if (theme === 'dark' || !theme) document.documentElement.classList.add('dark');
+            } catch(e) {}
         })();
         
-        // Handle direct deep links before app.js fully boots
-        if (window.location.hash.startsWith('#/u/')) {
-            document.addEventListener('DOMContentLoaded', () => {
-                const username = window.location.hash.split('/u/')[1];
-                if (username && typeof window.showPublicPage === 'function') {
-                    window.showPublicPage(username);
-                }
-            });
-        }
-
-        // Service Worker
+        // Service Worker Registration
         if ('serviceWorker' in navigator) {
             window.addEventListener('load', () => {
                 navigator.serviceWorker.register('sw.js').catch(e => console.warn("SW Error", e));
             });
         }
 
-        // Safe Initialization Check
+        // Nuclear Error Handler
         window.onerror = function(msg, url, line) {
             const status = document.getElementById('initStatus');
+            const loader = document.getElementById('loadingScreen');
+            if (loader) loader.classList.add('hidden');
             if (status) {
                 const message = typeof msg === 'string' ? msg : (msg.message || "Unknown error");
-                status.innerText = "⚠️ ERROR: " + message.substring(0, 30);
-                status.className = "mt-4 text-[10px] font-bold uppercase tracking-[0.2em] text-red-500";
+                status.innerText = "⚠️ ERROR: " + message.substring(0, 45);
+                status.style.color = "#ef4444";
             }
             console.error("Studio Error:", msg, url, line);
             return false;
         };
-        // Ensure no multiple siteLogos
-        document.addEventListener('DOMContentLoaded', () => {
-            const logos = document.querySelectorAll('#siteLogo');
-            logos.forEach((logo, i) => { if(i > 0) logo.id = 'siteLogo_' + i; });
-        });
     </script>
     <style>
         :root {
@@ -574,7 +563,7 @@
         <div class="relative">
             <div class="w-20 h-20 border-4 border-purple-500/20 border-t-purple-600 rounded-full animate-spin"></div>
             <div class="absolute inset-0 flex items-center justify-center">
-                <div id="siteLogo" class="w-10 h-10 bg-purple-600 text-white rounded-xl flex items-center justify-center text-xl font-bold shadow-lg">S</div>
+                <div class="w-10 h-10 bg-purple-600 text-white rounded-xl flex items-center justify-center text-xl font-bold shadow-lg">S</div>
             </div>
         </div>
         <div class="mt-6 text-center">
@@ -600,10 +589,10 @@
         <div class="glass w-full max-w-md p-8 relative z-10">
             <div class="text-center mb-8">
                 <div class="w-16 h-16 bg-gradient-to-br from-green-400 to-emerald-600 rounded-2xl mx-auto mb-4 flex items-center justify-center shadow-lg shadow-emerald-500/30">
-                   <span class="text-3xl font-bold text-black">S</span>
+                   <span id="siteLogo" class="text-3xl font-bold text-black">S</span>
                 </div>
-                <h1 class="text-3xl font-bold mb-2 tracking-tight">SaebMC Studio</h1>
-                <p class="text-gray-400 text-sm">Authentication Protocol v25.0</p>
+                <h1 id="siteTitle" class="text-3xl font-bold mb-2 tracking-tight">SaebMC Studio</h1>
+                <p id="welcomeMessage" class="text-gray-400 text-sm">Authentication Protocol v25.0</p>
                 <div id="initStatus" class="mt-4 text-[10px] font-bold uppercase tracking-[0.2em] opacity-80">📡 Initializing Core...</div>
             </div>
 
